<resources>
    <string name="app_name">DAM_UC3_Bonifacio</string>
    <string name="button_vuelos">Vuelos</string>
    <string name="button_paquete">Paquetes</string>
    <string name="button_hoteles">Hoteles</string>
    <string name="checkbox_puntos">Usar puntos LATAM Pass</string>
    <string name="button_compra">Procurar voos</string>
    <string name="button_auto">Autos</string>
    <string name="button_seguros">Seguros</string>
</resources>