<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="Comprar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="311dp"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Ida y vuelta" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="143dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Solamente ida" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="206dp"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/radioGroup4"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4">

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_airline_seat_recline_extra_24" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="Economy"
            android:textSize="14sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="166dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/radioGroup3"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3">

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="37dp"
            android:layout_height="29dp"
            app:srcCompat="@drawable/baseline_date_range_24" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            android:textSize="16sp" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="165dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup4"
        app:layout_constraintStart_toEndOf="@+id/radioGroup4"
        app:layout_constraintTop_toTopOf="@+id/radioGroup4">

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            app:srcCompat="@drawable/baseline_date_range_24" />

        <EditText
            android:id="@+id/editTextDate2"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="403dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="76dp"
            android:layout_height="35dp"
            android:text="@string/button_vuelos"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="90dp"
            android:layout_height="37dp"
            android:backgroundTint="#FAF2F2"
            android:text="@string/button_paquete"
            android:textColor="#121212"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="75dp"
            android:layout_height="37dp"
            android:backgroundTint="#D8D0D0"
            android:text="@string/button_hoteles"
            android:textColor="#090909"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#D8D0D0"
            android:text="@string/button_auto"
            android:textColor="#070707"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D8D0D0"
            android:text="@string/button_seguros"
            android:textColor="#0C0C0C"
            android:textSize="10sp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="239dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:text="@string/checkbox_puntos"
        app:layout_constraintStart_toStartOf="@+id/radioGroup6"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="318dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#E91E63"
        android:text="@string/button_compra"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="347dp"
        android:layout_height="89dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

        <RadioGroup
            android:layout_width="208dp"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/baseline_flight_takeoff_24" />

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="195dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:text="Origen"
                android:textSize="14sp" />

        </RadioGroup>

        <RadioGroup
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="37dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/baseline_flight_land_24" />

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="Destino"
                android:textSize="14sp" />
        </RadioGroup>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup6"
        android:layout_width="205dp"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/radioGroup5"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Compre voos con stopover em Sao Paulo com nosso assistente virtual."
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="551dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Abrir WhatsApp"
        android:textColor="#667ADD"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="597dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inicio"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="690dp" />

</androidx.constraintlayout.widget.ConstraintLayout>